[tool.poetry]
name = "citybuilder"
version = "0.1.0"
description = ""
authors = ["massil.ferhani,maxime.chardon"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Shapely = "^1.7.1"
numpy = "^1.21.0"
Fiona = "^1.8.20"
matplotlib = "^3.4.2"
geopandas = "^0.9.0"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
